<resources>
    <string name="app_name">CuteBoard</string>
    <string name="post_img">Post image.</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="welcome">Welcome to the CuteBoard!</string>
    <string name="rss_default">Enter RSS feed URL.</string>
    <string name="random_link">∀</string>
    <string name="start">Get started!</string>
    <string name="wifi">Yay! Wifi enabled! ^_^</string>
    <string name="mobile_data">Yay! Mobile data enabled! ^_^ </string>
    <string name="no_internet">Not connected to Internet! :c </string>
    <string name="no_internet_short">No Internet! :c</string>
</resources>
