<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_below="@id/welcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        app:srcCompat="@mipmap/kitty" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/rss_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:text="@string/rss_default"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/input_rss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rss_url"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/rss_default"
        android:inputType="textUri">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/get_started"
        style="@style/MainButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_rss"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/start" />

</RelativeLayout>
