<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/post_contents_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="60dp"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="0dp">

        <RelativeLayout
            android:id="@+id/postContentHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg"
            android:padding="20dp"
            android:visibility="visible">

            <android.support.v7.widget.CardView
                android:id="@+id/postImageHolder"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"
                android:layout_margin="5dp"
                android:elevation="10dp">
                <ImageView
                    android:id="@+id/postImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/postDateLabel"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/post_img"
                    android:scaleType="centerCrop" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/postTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:hint="@string/title"
                android:maxLines="2"
                android:textIsSelectable="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/postDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/postTitleLabel"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@id/postImageHolder"
                android:gravity="center"
                android:hint="@string/date"
                android:maxLines="1"
                android:textIsSelectable="false"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/postContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/postDateLabel"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@id/postImageHolder"
                android:gravity="center"
                android:hint="@string/date"
                android:maxLines="4"
                android:textIsSelectable="false"
                android:textSize="12sp" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>